@@ -1810,7 +1810,7 @@ function unselect_text(ev) {
 
 function edit_text(ev) {
 	// if a text element is clicked, select it and listen for keypresses.
-	if(ev.target.nodeName=='text'){
+	if(ev.target.nodeName=='text' || ev.target.nodeName=='tspan'){
 		// Clean up previous selection if applicable
 		try{
 			select_box.remove()
@@ -1823,8 +1823,15 @@ function edit_text(ev) {
 			selected_text.attr({transform:trans})
 		} catch(err){}
 
+		// deal with tspans
+		if(ev.target.nodeName=='tspan'){
+			selected_text=Snap(ev.target)
+			selected_text=Snap(selected_text.parent())
+		} else {
+			selected_text=Snap(ev.target)
+		}
+
 		// if text is rotated, un-rotate it
-		selected_text=Snap(ev.target)
 		trans=selected_text.attr('transform')
 		selected_text.attr({transform:''})
 		coords=selected_text.getBBox()
@@ -2556,31 +2563,36 @@ function importsettings() {
 function highlight_element(ev) {
 	// this should handle basically every case of mousing over a data element and getting a highlight effect
 	item=Snap(ev.target)
-		try{if(ev.target.nodeName=='path'){
-			item.attr({'stroke-width':parseFloat(item.attr('stroke-width'))+3,'stroke-opacity':parseFloat(item.attr('stroke-opacity'))-.5})
-		}}catch(err){}
-		try{if(ev.target.nodeName=='circle'){
-			item.attr({'r':parseFloat(item.attr('r'))+2,'stroke-width':parseFloat(item.attr('stroke-width'))+1,'stroke-opacity':parseFloat(item.attr('stroke-opacity'))-.5})
-		}}catch(err){} 
-		try{if(ev.target.nodeName=='line' && ev.target.attributes.ident.value=='key'){
-			item.attr({'stroke-width':parseFloat(item.attr('stroke-width'))+2,'stroke-opacity':parseFloat(item.attr('stroke-opacity'))-.5})
-		}}catch(err){} 
-		try{if(ev.target.nodeName=='rect' && ev.target.attributes.ident.value=='key' && ev.target.attributes.ident2.value!='floatkey'){
-			item.attr({'stroke-opacity':parseFloat(item.attr('stroke-opacity'))-.5,'fill-opacity':parseFloat(item.attr('fill-opacity'))-.5,'x':parseFloat(item.attr('x'))-2,'y':parseFloat(item.attr('y'))-2,'width':parseFloat(item.attr('width'))+4,'height':parseFloat(item.attr('height'))+4})
-		}}catch(err){} 
-		try{if(ev.target.nodeName=='rect' && ev.target.attributes.data_type.value=='bar'){
-			item.attr({'stroke-opacity':parseFloat(item.attr('stroke-opacity'))-.5,'fill-opacity':parseFloat(item.attr('fill-opacity'))-.5,'x':parseFloat(item.attr('x'))-2,'y':parseFloat(item.attr('y'))-2,'width':parseFloat(item.attr('width'))+4,'height':parseFloat(item.attr('height'))+4})
-		}}catch(err){}  
-		try{if(ev.target.nodeName=='line' && ev.target.attributes.class.value=='callout'){
-			item.attr({'stroke-width':parseFloat(item.attr('stroke-width'))+2,'stroke-opacity':parseFloat(item.attr('stroke-opacity'))-.5})
-		}}catch(err){}  
-		try{if(ev.target.nodeName=='text'){
-			item.attr({'font-size':parseFloat(item.attr('font-size')),'opacity':(parseFloat(item.attr('opacity'))>.5 ? parseFloat(item.attr('opacity'))-.5 : .2)})
-		}}catch(err){} 
-		try{if(ev.target.className.baseVal=='dataelement'){
-			coords=item.getBBox()
-			highlighttext=grapharea.text(coords.x+coords.width/2,coords.y+coords.height/2,item.attr('data_label')).attr({'font-family':'Lato, Arial, sans-serif','font-size':16,'text-anchor':'start','fill':'black','font-weight':400,cursor:'pointer'})
-		}}catch(err){}
+	console.log(item)
+	try{if(ev.target.nodeName=='path'){
+		item.attr({'stroke-width':parseFloat(item.attr('stroke-width'))+3,'stroke-opacity':parseFloat(item.attr('stroke-opacity'))-.5})
+	}}catch(err){}
+	try{if(ev.target.nodeName=='circle'){
+		item.attr({'r':parseFloat(item.attr('r'))+2,'stroke-width':parseFloat(item.attr('stroke-width'))+1,'stroke-opacity':parseFloat(item.attr('stroke-opacity'))-.5})
+	}}catch(err){} 
+	try{if(ev.target.nodeName=='line' && ev.target.attributes.ident.value=='key'){
+		item.attr({'stroke-width':parseFloat(item.attr('stroke-width'))+2,'stroke-opacity':parseFloat(item.attr('stroke-opacity'))-.5})
+	}}catch(err){} 
+	try{if(ev.target.nodeName=='rect' && ev.target.attributes.ident.value=='key' && ev.target.attributes.ident2.value!='floatkey'){
+		item.attr({'stroke-opacity':parseFloat(item.attr('stroke-opacity'))-.5,'fill-opacity':parseFloat(item.attr('fill-opacity'))-.5,'x':parseFloat(item.attr('x'))-2,'y':parseFloat(item.attr('y'))-2,'width':parseFloat(item.attr('width'))+4,'height':parseFloat(item.attr('height'))+4})
+	}}catch(err){} 
+	try{if(ev.target.nodeName=='rect' && ev.target.attributes.data_type.value=='bar'){
+		item.attr({'stroke-opacity':parseFloat(item.attr('stroke-opacity'))-.5,'fill-opacity':parseFloat(item.attr('fill-opacity'))-.5,'x':parseFloat(item.attr('x'))-2,'y':parseFloat(item.attr('y'))-2,'width':parseFloat(item.attr('width'))+4,'height':parseFloat(item.attr('height'))+4})
+	}}catch(err){}  
+	try{if(ev.target.nodeName=='line' && ev.target.attributes.class.value=='callout'){
+		item.attr({'stroke-width':parseFloat(item.attr('stroke-width'))+2,'stroke-opacity':parseFloat(item.attr('stroke-opacity'))-.5})
+	}}catch(err){}  
+	try{if(ev.target.nodeName=='text'){
+		item.attr({'font-size':parseFloat(item.attr('font-size')),'opacity':(parseFloat(item.attr('opacity'))>.5 ? parseFloat(item.attr('opacity'))-.5 : .2)})
+	}}catch(err){} 
+	try{if(ev.target.nodeName=='tspan'){
+		item=item.parent()
+		item.attr({'font-size':parseFloat(item.attr('font-size')),'opacity':(parseFloat(item.attr('opacity'))>.5 ? parseFloat(item.attr('opacity'))-.5 : .2)})
+	}}catch(err){} 
+	try{if(ev.target.className.baseVal=='dataelement'){
+		coords=item.getBBox()
+		highlighttext=grapharea.text(coords.x+coords.width/2,coords.y+coords.height/2,item.attr('data_label')).attr({'font-family':'Lato, Arial, sans-serif','font-size':16,'text-anchor':'start','fill':'black','font-weight':400,cursor:'pointer'})
+	}}catch(err){}
 }
 
 function unhighlight_element(ev) {
@@ -2605,6 +2617,10 @@ function unhighlight_element(ev) {
 			item.attr({'stroke-width':parseFloat(item.attr('stroke-width'))-2,'stroke-opacity':parseFloat(item.attr('stroke-opacity'))+.5})
 		}}catch(err){} 
 		try{if(ev.target.nodeName=='text'){
+			item.attr({'font-size':parseFloat(item.attr('font-size')),'opacity':parseFloat(item.attr('opacity'))+.5})
+		}}catch(err){}
+		try{if(ev.target.nodeName=='tspan'){
+			item=item.parent()
 			item.attr({'font-size':parseFloat(item.attr('font-size')),'opacity':parseFloat(item.attr('opacity'))+.5})
 		}}catch(err){}
 		try{if(ev.target.className.baseVal=='dataelement'){
